# genbio-leaderboard

./: .gitignore  README.md  pyproject.toml
src/genbio/: __init__.py
src/genbio/datasets/: utils.py
src/genbio/datasets/RNA/translation_efficiency_muscle/: README.md  load.py
src/genbio/datasets/RNA/translation_efficiency_pc3/: README.md  evaluate.py  load.py
src/genbio/datasets/expression/cell_type_classification_segerstolpe/: README.md  evaluate.py  load.py
src/genbio/leaderboard/: __init__.py  main.py  reporting.py
tests/: test.py  test.sh
